src/test/deca/syntax/valid/parser/affect.deca
// Description:
//    Test non terminal primary_exp.
//
// Resultats:
//    ok

{
    float a = 2.3;
}
